--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   </head>
 
   <body>
+    <div>
+      <input type="search" id="search">
     <div id="root"></div>
+    </div>
+    
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </body>
 </html>
