--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div>
-      <input type="search" id="search">
+      <input type="search" id="search" placeholder="Search">
     <div id="root"></div>
     </div>
     
