--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
   <body>
     <div>
+      <label for="search">
       <input type="search" id="search" placeholder="Search">
+    </label>
+    <label for="select">
+      <select id="select"></select>
+    </label>
     <div id="root"></div>
     </div>
     
@@ -25,6 +30,6 @@
     <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
-    <script defer src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
