Updated index file

--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
   <body>
     <div>
       <label for="search">
-      <input type="search" id="search" placeholder="Search">
-    </label>
-    <label for="select">
-      <select id="select"></select>
-    </label>
-    <div id="root"></div>
+        <input type="search" id="search" placeholder="Search" />
+      </label>
+      <label for="select">
+        <select id="select"></select>
+      </label>
+      <div id="root"></div>
     </div>
-    
-
-    <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-    <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
