adding new select for other shows and adding css for select container

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 
   <body>
     <div>
+      <div id="select-container">
+        <label for="otherShowsSelect">
+          <select id="otherShowsSelect"></select>
+        </label>
       <label for="search">
+        <label for="select">
+          <select id="select"></select>
+        </label>
         <input type="search" id="search" placeholder="Search" />
       </label>
-      <label for="select">
-        <select id="select"></select>
-      </label>
+    </div>
       <div id="root"></div>
     </div>
 
