edited the index file

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <label for="otherShowsSelect">
           <select id="otherShowsSelect"></select>
         </label>
-      <label for="search">
-        <label for="select">
-          <select id="select"></select>
+        <label for="search">
+          <label for="select">
+            <select id="select"></select>
+          </label>
+          <input type="search" id="search" placeholder="Search" />
         </label>
-        <input type="search" id="search" placeholder="Search" />
-      </label>
-    </div>
+      </div>
       <div id="root"></div>
     </div>
 
     <!-- Loads YOUR javascript code -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
