--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div>
       <div id="select-container">
+        <input type="search" id="search" placeholder="Search" />
         <label for="otherShowsSelect">
           <select id="otherShowsSelect"></select>
         </label>
@@ -24,7 +25,8 @@
           <label for="select">
             <select id="select"></select>
           </label>
-          <input type="search" id="search" placeholder="Search" />
+          <select id="rating"></select>
+          <select id="genre"></select>
         </label>
       </div>
       <div id="root"></div>
